--- a/docker-build.yml
+++ b/docker-build.yml
@@ -2,30 +2,33 @@ name: Docker Build and Push
 
 on:
   push:
-    branches: [main] # Trigger the workflow on pushes to the main branch (adjust as needed)
+    branches: [main]  # Trigger on pushes to the main branch
   pull_request:
-    branches: [main] # Trigger on pull requests to main
+    branches: [main]  # Trigger on pull requests to main
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest # Use an Ubuntu runner (you can use other runners too)
+    runs-on: ubuntu-latest  # Use an Ubuntu runner
     permissions:
       contents: read
-      packages: write # Required for pushing to GitHub Packages
+      packages: write  # Required for pushing to GitHub Packages
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build the Docker image
-        run: docker build -t your-github-username/your-repository-name:latest . # Replace with your details
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }} # Use the GITHUB_TOKEN secret
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push the Docker image
-        run: docker push your-github-username/your-repository-name:latest # Replace with your details
+      - name: Build and push the Docker image
+        run: |
+          IMAGE_NAME="ghcr.io/${{ github.repository_owner }}/dataworks-project:latest"
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
