--- a/.github/workflows/docker-run.yml
+++ b/.github/workflows/docker-run.yml
@@ -24,7 +24,12 @@ jobs:
       - name: Run Docker Container
         run: |
           docker run -d -p 8000:8000 --env LLMFOUNDRY_TOKEN=${{ secrets.LLMFOUNDRY_TOKEN }} --name my-running-app my-app
+     
           sleep 10  # Wait for the container to start
+
+      - name: Debug Environment Variables
+        run: echo "LLMFOUNDRY_TOKEN=${{ secrets.LLMFOUNDRY_TOKEN }}"
+
           
 
 
