--- a/.github/workflows/docker-run.yml
+++ b/.github/workflows/docker-run.yml
@@ -1,4 +1,4 @@
-name: Docker Build, Run & Test in GitHub Actions
+name: Docker Build, Push & Test in GitHub Actions
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build-run-test:
+  build-push-run:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,22 +17,29 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Build Docker Image
         run: |
           docker build -t my-app .
+          docker tag my-app ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
 
-      - name: Run Docker Container
+      - name: Push Docker Image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
+
+      - name: Run Docker Container from Docker Hub
         run: |
           docker run -d -p 8000:8000 \
           --env LLMFOUNDRY_TOKEN="${{ secrets.LLMFOUNDRY_TOKEN }}" \
-          --name my-running-app my-app
+          --name my-running-app ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
           sleep 10
 
       - name: Debug Environment Variables
         run: echo "LLMFOUNDRY_TOKEN=${{ secrets.LLMFOUNDRY_TOKEN }}"
-
-          
-
 
       - name: Verify Container is Running
         run: |
