--- a/.github/workflows/docker-run.yml
+++ b/.github/workflows/docker-run.yml
@@ -20,16 +20,21 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          username: "${{ secrets.DOCKER_HUB_USERNAME }}"
+          password: "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}"
+
+      - name: Debug Environment Variables
+        run: echo "USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}"
+             echo "TOKEN=${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}"
+        
 
       - name: Build Docker Image
         run: |
           docker build -t my-app .
-          docker tag my-app ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
+          docker tag my-app "${{ secrets.DOCKER_HUB_USERNAME }}"/my-app:latest
 
       - name: Push Docker Image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
+        run: docker push "${{ secrets.DOCKER_HUB_USERNAME }}"/my-app:latest
 
       - name: Run Docker Container from Docker Hub
         run: |
