--- a/.github/workflows/docker-run.yml
+++ b/.github/workflows/docker-run.yml
@@ -1,4 +1,4 @@
-name: Docker Build, Run & Test in GitHub Actions
+name: Docker Build, Push & Run in GitHub Actions
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build-run-test:
+  build-push-run:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,14 +17,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Build Docker Image
         run: |
-          docker build -t my-app .
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/dataworks-project:latest .
 
-      - name: Run Docker Container
+      - name: Push Image to Docker Hub
         run: |
-          docker run -d -p 8000:8000 --env LLMFOUNDRY_TOKEN="${{ secrets.LLMFOUNDRY_TOKEN }}" --name my-running-app my-app
-          sleep 10  # Wait for the container to start
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/dataworks-project:latest
+
+      - name: Run Docker Container from Docker Hub
+        run: |
+          docker run -d -p 8000:8000 --env LLMFOUNDRY_TOKEN="${{ secrets.LLMFOUNDRY_TOKEN }}" \
+          --name my-running-app ${{ secrets.DOCKER_HUB_USERNAME }}/dataworks-project:latest
+          sleep 10
 
       - name: Verify Container is Running
         run: |
@@ -42,4 +53,3 @@ jobs:
         run: |
           docker stop my-running-app
           docker rm my-running-app
-
